--- a/.render.yaml
+++ b/.render.yaml
@@ -6,4 +6,10 @@ services:
     startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
     envVars:
       - key: PORT
-        value: 10000 
+        value: 10000
+
+  - type: worker
+    name: telegram-bot
+    runtime: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python bot.py" 
